Hecho lo de bases de datos, Hogwarts me debe 3500€ - quitados los credenciales